--- a/about.html
+++ b/about.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beetroot2020</title>
+    <title>Document</title>
 </head>
 
 <body>
- some text new
+
 </body>
 
 </html>
-
-
