--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, minima quis! Consectetur libero dolor ipsum ut
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+    Atque, minima quis! Consectetur libero dolor ipsum ut
     modi. Eius amet laudantium omnis, modi mollitia consectetur quas ut minus vero perspiciatis facere.
 </body>
 
